jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
/* ... */
.group-list-caption-container {
    height: 32px;
    padding-top: 5px;
    border-bottom: solid 2px rgb(128, 128, 128);
}

.group-list {
    height: 360px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.group-container {
    white-space: nowrap;
    width: 100%;
}

.group-container-highlighted {
    background: lightskyblue;
}
div[id^='list-item']  .tooltip {
    white-space: pre-wrap;
    max-width: 255px;
}

.group-list-caption-container, .group-list {
    width: 235px;
    margin: 0px;
}

.list-container input{
    margin: 5px;
}

.list-container input[type="checkbox"] + label {
    display:inline-block;
    margin:-1px 4px 0 0;
    vertical-align:middle;
}

.list-container label{
    width: 190px;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -webkit-text-overflow: ellipsis;
}

.group-caption {
    font-weight: bold;
    font-size: 120%;
}

pre.prettyprint {
    margin: 6px;
}

.two-list-selector-control {
    padding: 2px 0px;
}

.text_errorpage {
    max-width: 420px;
    display: inline-block;
}

.linear_transitions {
    transition:all .2s linear;
    -o-transition:all .2s linear;
    -moz-transition:all .2s linear;
    -webkit-transition:all .2s linear;
}

.image_errorpage {
    padding-left: 420px;
}

@media (max-width: 639px) {
    .image_errorpage {
        display: none;
    }
}

#lang-selector-toggle-li .tooltip {
    white-space: pre-wrap;
    max-width: 71px;
}

#lang-selector-toggle-li .tooltip .tooltip-inner {
    word-wrap: normal;
}

.full-width {
    width: 100%;
}

.plugin-checkbox {
    /* This style uses to select all plugin activating checkboxes from plugins list page*/
}

.plugin-popup {
    position: absolute;
    left: 50%;
    padding: 0.7em 1em;
    font-size: 15px;
    margin-right: 10%;
}

.badge {
    display: inline-block;
    padding: 2px 4px;
    font-size: 11.844px;
    font-weight: bold;
    line-height: 14px;
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    white-space: nowrap;
    vertical-align: baseline;
    background-color: #999999;
}

.badge {
    padding-right: 9px;
    padding-left: 9px;
    -webkit-border-radius: 9px;
    -moz-border-radius: 9px;
    border-radius: 9px;
}

.label-inverse, .badge-inverse {
    background-color: #444444;
}

.new-topic-buttons {
    float: left;
    display: inline-block;
    margin-bottom: 10px;
}

.brand {
    max-width: 55%;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.custom-selected-item, .custom-selected-item a{
    color: #ffffff !important;
    text-decoration: none !important;
    outline: 0 !important;
    background-color: #428bca !important;
    background-image: none !important;
    border: none !important;
    font-weight: normal !important;
}

.suggestion-list {
    font-size: 13px !important;
    line-height: 1.2em !important;
}

